Fix incorrect tinderbox popups with fastback (bug 292933).  Make sure mLSHE is nulled out when we finish fastback navigation.  r+sr=darin, a=brendan.